--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^7.0.0",
+    "bcrypt": "^5.0.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
