--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
     "concurrently": "^7.0.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
