--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "^4.11.4",
+    "@material/typography": "^13.0.0",
+    "@mui-treasury/components": "^1.10.1",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
+    "@mui/styles": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -18,8 +23,10 @@
     "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^3.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
     "sequelize": "^6.17.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
