--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -18,6 +18,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.0.1",
     "concurrently": "^7.0.0",
+    "dotenv": "^16.0.0",
+    "firebase": "^9.6.8",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
