--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "concurrently": "^7.0.0",
+    "dotenv": "^16.0.0",
+    "firebase": "^9.6.8",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
