--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -16,11 +16,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "firebase": "^9.6.8",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
@@ -32,6 +35,7 @@
     "react-swipeable-views": "^0.14.0",
     "sequelize": "^6.17.0",
     "styled-components": "^5.3.3",
+    "volleyball": "^1.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
