--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
     "@mui/styles": "^5.5.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -30,9 +31,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.2.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-swipeable-views": "^0.14.0",
+    "redux-logger": "^3.0.6",
     "sequelize": "^6.17.0",
     "styled-components": "^5.3.3",
     "volleyball": "^1.5.1",
