--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "5.0.0",
     "react-swipeable-views": "^0.14.0",
     "redux-logger": "^3.0.6",
+    "semantic-ui-react": "^2.1.2",
     "sequelize": "^6.17.0",
     "styled-components": "^5.3.3",
     "volleyball": "^1.5.1",
