--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -23,8 +23,14 @@
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "emailjs-gmail": "^1.0.1",
     "firebase": "^9.6.8",
+    "generic-gmailsender": "^1.0.2",
+    "gmail-send": "^1.8.14",
+    "gmail-sender-oauth": "^1.0.5",
+    "googleapis": "^39.2.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
