--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.5.0",
     "@mui/styled-engine-sc": "^5.4.2",
     "@mui/styles": "^5.5.0",
+    "@mui/x-data-grid": "^5.6.1",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
