--- a/ecommerce-aventurados/package.json
+++ b/ecommerce-aventurados/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "emailjs-com": "^3.2.0",
     "emailjs-gmail": "^1.0.1",
     "firebase": "^9.6.8",
     "generic-gmailsender": "^1.0.2",
